[gd_scene load_steps=10 format=3 uid="uid://dvcusdvciv5vp"]

[ext_resource type="Script" path="res://src/Fantome/Characters/FantomeCharacter.cs" id="1_wit7o"]
[ext_resource type="Script" path="res://src/Fantome/Characters/GravityController.cs" id="2_1kg42"]
[ext_resource type="SpriteFrames" uid="uid://cxaylyfivfs23" path="res://assets/characters/stitch/stitch-overworld.tres" id="2_xa7vj"]
[ext_resource type="Script" path="res://src/Fantome/Characters/StateController.cs" id="4_v1yar"]
[ext_resource type="PackedScene" uid="uid://c58ypi1c55p45" path="res://resources/movesets/p_stc_adv.tscn" id="5_i706o"]
[ext_resource type="Animation" uid="uid://cr11execracm0" path="res://resources/animations/p_stc_reset.tres" id="5_w4wt2"]
[ext_resource type="Script" path="res://scripts/animation/anim_process_stitch.gd" id="7_0ilj2"]

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d2ags"]
_data = {
&"RESET": ExtResource("5_w4wt2")
}

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_18hj6"]
points = PackedVector3Array(1.42, 0, 0, 1.23, 1.503, 0, 0.71, 2.602, 0, 0, 3.005, 0, -0.71, 2.602, 0, -1.23, 1.503, 0, -1.42, 0, 0, -1.23, -1.503, 0, -0.71, -2.602, 0, 0, -3.005, 0, 0.71, -2.602, 0, 1.23, -1.503, 0)

[node name="Stitch" type="CharacterBody3D" node_paths=PackedStringArray("VisualReference", "StateController", "GravityController", "BodyAnimator")]
collision_layer = 2
script = ExtResource("1_wit7o")
VisualReference = NodePath("Sprite")
StateController = NodePath("StateController")
GravityController = NodePath("GravityController3D")
BodyAnimator = NodePath("BodyAnimator")

[node name="Sprite" type="AnimatedSprite3D" parent="."]
offset = Vector2(-50, 300.5)
alpha_cut = 2
sprite_frames = ExtResource("2_xa7vj")
animation = &"idle"

[node name="GravityController3D" type="Node3D" parent="." node_paths=PackedStringArray("Character")]
script = ExtResource("2_1kg42")
Character = NodePath("..")

[node name="StateController" type="Node" parent="." node_paths=PackedStringArray("MoveSets")]
script = ExtResource("4_v1yar")
MoveSets = [NodePath("Adventure")]

[node name="Adventure" parent="StateController" node_paths=PackedStringArray("Controller") instance=ExtResource("5_i706o")]
Controller = NodePath("..")

[node name="BodyAnimator" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_d2ags")
}

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.35, 3.005, 0)
shape = SubResource("ConvexPolygonShape3D_18hj6")

[node name="StitchAnimationProcessor" type="Node" parent="." node_paths=PackedStringArray("state_controller")]
script = ExtResource("7_0ilj2")
rotation_weight = 0.2
state_controller = NodePath("../StateController")

[connection signal="ProcessAnimation" from="StateController" to="StitchAnimationProcessor" method="process_anim"]
